--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Kaydon Stubbs Software Engineer</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
     </head>
     <body>
         <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
         <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/</a></h2>
         <iframe src="Kaydon Stubbs's Resume.pdf"></iframe>
+        <nav><a href="MySkills.html">My Skills</a><a href="ToLearn.html">Skills I Am Learning</a></nav>
     </body>
 </html>
