--- a/MySkills.html
+++ b/MySkills.html
@@ -18,60 +18,60 @@
     <div class="skills">
         <ul>
             <li>
-                C#/.NET Core/.Net
+                <h3>C#/.NET Core/.Net</h3>
+                <p>I am taking another course to help give me projects in asp.net and .Net Core. Eache week I will do a new project using this tech stack.</p>
             </li>
             <li>
-                Javascript
+                <h3>Javascript</h3>
+                <p>I will be writing this personal website using javascript, Html and css.</p>
             </li>
             <li>
-                Web Development(HTML, css)</li>
-            <li>
-                Web Services(SOAP, REST, microservices, DDD)
+                <h3>Web Development(HTML, css)</h3>
             </li>
             <li>
-                object-oriented principles
+                <h3>Web Services(SOAP, REST, microservices, DDD)</h3>
             </li>
             <li>
-                Unit testing
+                <h3>Object-oriented principles</h3>
             </li>
             <li>
-                Experience with GIT
+                <h3>Unit testing</h3>
             </li>
             <li>
-                Coding(Python, c++ Java)
+                <h3>Experience with GIT</h3>
             </li>
             <li>
-                Ability to obtain a U.S. DOD Security Clearance up to the Top Secret level if required/ US Citizen
+                <h3>Coding(Python, c++ Java)</h3>
             </li>
             <li>
-                WordPress
+                <h3>Ability to obtain a U.S. DOD Security Clearance up to the Top Secret level if required/ US Citizen</h3>
             </li>
             <li>
-                Visual Studio 
+                <h3>WordPress</h3>
             </li>
             <li>
-                Distributed systems
+                <h3>Visual Studio</h3> 
             </li>
             <li>
-                breaking down customer requirements into well-defined technical tasks
+                <h3>Distributed systems</h3>
             </li>
             <li>
-                single responsibility and dependency injection
+                <h3>Breaking down customer requirements into well-defined technical tasks</h3>
             </li>
             <li>
-                single responsibility and dependency injection
+                <h3>single responsibility and dependency injection</h3>
             </li>
             <li>
-                Agile Experience
+                <h3>Agile Experience</h3>
             </li>
             <li>
-                Willing to Learn/Teach
+                <h3>Willing to Learn/Teach</h3>
             </li>
             <li>
-                Prototyping
+                <h3>Prototyping</h3>
             </li>
             <li>
-                US Citizen
+                <h3>US Citizen</h3>
             </li>
         </ul>
     </div>
