improvved skills section

--- a/MySkills.html
+++ b/MySkills.html
@@ -19,7 +19,8 @@
         <ul>
             <li>
                 <h3>C#/.NET Core/.Net</h3>
-                <p>I am taking another course to help give me projects in asp.net and .Net Core. Eache week I will do a new project using this tech stack.</p>
+                <p>I am taking another course to help give me projects in asp.net and .Net Core. Eache week I will do a
+                    new project using this tech stack.</p>
             </li>
             <li>
                 <h3>Javascript</h3>
@@ -27,48 +28,62 @@
             </li>
             <li>
                 <h3>Web Development(HTML, css)</h3>
+                <p>I will be writing this personal website using javascript, Html and css.</p>
             </li>
             <li>
                 <h3>Web Services(SOAP, REST, microservices, DDD)</h3>
+                <p>I wil be using more REST services in my .NET projects.</p>
             </li>
             <li>
                 <h3>Object-oriented principles</h3>
+                <p>I am working on a java card game. It will be a card dungeon crawler. I will use Java to practie OO
+                    principles.</p>
             </li>
             <li>
                 <h3>Unit testing</h3>
+                <p>Unit testing allows me to prove that my code is working the way I think it is. I use this before I
+                    push to my repos.</p>
             </li>
             <li>
                 <h3>Experience with GIT</h3>
+                <p>Each project I do has a git repo. This helps me keep track of what I have done and try things on
+                    different branches so that I dont break the master when I try new things.</p>
             </li>
             <li>
                 <h3>Coding(Python, c++ Java)</h3>
-            </li>
-            <li>
-                <h3>Ability to obtain a U.S. DOD Security Clearance up to the Top Secret level if required/ US Citizen</h3>
+                <p>I have many projects in c, c++, java and pythin. I am working on a triangulation application using
+                    python.</p>
             </li>
             <li>
                 <h3>WordPress</h3>
+                <p>I have made wordpress websites for a needpoint business.</p>
             </li>
             <li>
                 <h3>Visual Studio</h3> 
+                <p>For most of my projects I use Visual studios. It is nice because of all the templetes it provides.</p>
             </li>
             <li>
                 <h3>Distributed systems</h3>
+                <p>Using eixir I practice concuracny in my programs. I am also able to use multiple computers to improve the ability of my programs.</p>
             </li>
             <li>
                 <h3>Breaking down customer requirements into well-defined technical tasks</h3>
+                <p>Each of my assignments I have to break down customer(Teacher) requirements. If I don't I seek a better understanding with the customer.</p>
             </li>
             <li>
-                <h3>single responsibility and dependency injection</h3>
+                <h3>Single responsibility and dependency injection</h3>
+                <p>This is imortant to make my code flexible. This is commonly used in Xamarain forms and .Net Core projects.</p>
             </li>
             <li>
                 <h3>Agile Experience</h3>
+                <p>Every Porject I do for school is a lesson in Agile programing.</p>
             </li>
+                    <li>
+                        <h3>Prototyping</h3>
+                        <p>This is what I really like to do. It allows me to just try things and experiment. It is nice because I know that i dont have to be perfect the first time threw. I can just try. It is important to remember that a prototype is not ment for production.</p>
+                    </li>
             <li>
                 <h3>Willing to Learn/Teach</h3>
-            </li>
-            <li>
-                <h3>Prototyping</h3>
             </li>
             <li>
                 <h3>US Citizen</h3>
