cleaning up skills and plan

--- a/ToLearn.html
+++ b/ToLearn.html
@@ -13,30 +13,53 @@
     <h2>LinkedIn: <a
             href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/</a>
     </h2>
-    <nav><a href="MySkills.html">My Skills</a><a href="ToLearn.html">Skills I Am Learning</a></nav>
+    <nav><a href="home.html">Home  </a><a href="MySkills.html">My Skills  </a><a href="ToLearn.html">Skills I Am Learning  </a></nav>
     <div class="PrioratizedToLearn">
         <h2>Skills I will Prioratize.</h2>
+        <p>For each skill I plan on Five to Ten hours of learning time.</p>
+        <p>Most Of these skils wil follow a similar method on how I will learn it. I will use tutorials and personal projects.</p>
         <ol>
             <li>
                 PHP/PHP Frameworks
+                <p>To learn PHP and PHP frameworsk I wil start with some youtube tutorials. I will follow along with the project they do then do a project of my own.</p>
+                <time>10 hours</time>
             </li>
             <li>
                 Java/Spring Framework
+                <time>10 hours</time>
             </li>
             <li>
                 Cloud-based processing methods and tools, including AWS, microservices, IaaS/PaaS services. 
+                <p>I have done some work with azure web services. I need to practice this some more. I will make a web crawler.</p>
+                <time>10 hours</time>
             </li>
             <li>
                 Python/Django
+                <p>I have spent some time working on algorithms in python. I want to continue practicing Algorithms using Python. I want to try some AI and implimenting RSA encryption using python.</p>
+                <time>15 hours</time>
             </li>
-            <li>Linux</li>
+            <li>Linux
+                <p>I will download a linux distro to practice. I dont think this one will take to long to get some experience.</p>
+                <time>5 hours</time>
+            </li>
             <li>AJAX</li>
-            <li>Deployment</li>
-            <li>Security</li>
+            <li>Deployment
+                <p>I have started this already. I have deployed this personal website. I want to practice packaging java projects for distribution.</p>
+                <time>5 hours</time>
+            </li>
+            <li>Security
+                <p>This one I will use the Hacker101.com lessons. They are designed to help start participating in bug bounties.</p>
+                <time>10 hours</time>
+            </li>
             <li>
                 Database languages/integrations, basic schema design, developer APIs. 
+                <p>I am curently using entity framework for my asp.net projects. I will also improve by learning PHP. I will use Dockr containers to be able to set up databases easily with little overhead.</p>
+                <time>10 hours</time>
             </li>
-            <li>Docker</li>
+            <li>Docker
+                <p>I have done some work with docker. I think I need to explore more of the contrainers and see how I can impliment them in my projects.</p>
+                <time>5 hours</time>
+            </li>
         </ol>
     </div>
     <div class="NonPrioratizedToLearn">
