--- a/MySkills.html
+++ b/MySkills.html
@@ -14,7 +14,7 @@
             href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/</a>
     </h2>
 
-    <nav><a href="MySkills.html">My Skills</a><a href="ToLearn.html">Skills I Am Learning</a></nav>
+    <nav><a href="home.html">Home  </a><a href="MySkills.html">My Skills  </a><a href="ToLearn.html">Skills I Am Learning  </a></nav>
     <div class="skills">
         <ul>
             <li>
