--- a/home.html
+++ b/home.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Kaydon Stubbs Software Engineer</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    </head>
-    <body>
-        <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
-        <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/</a></h2>
-        <iframe src="Kaydon Stubbs's Resume.pdf"></iframe>
-        <nav><a href="home.html">Home  </a><a href="MySkills.html">My Skills  </a><a href="ToLearn.html">Skills I Am Learning  </a></nav>
-    </body>
+<head>
+    <title>Kaydon Stubbs Software Engineer</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+<header>
+    <div class="nav">
+        <ul>
+            <li><a href="home.html">Home </a></li>
+            <li><a href="MySkills.html">My Skills </a></li>
+            <li><a href="ToLearn.html">Skills I Am Learning </a></li>
+        </ul>
+    </div>
+</header>
+<main>
+    <br>
+    <br>
+    <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
+    <h2>LinkedIn: <a
+            href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/</a>
+    </h2>
+
+    <iframe src="Kaydon Stubbs's Resume.pdf"></iframe>
+</main>
+<footer>
+    
+</footer>
+</body>
+
 </html>
