--- a/ToLearn.html
+++ b/ToLearn.html
@@ -5,15 +5,26 @@
     <title>Kaydon Stubbs Software Engineer</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+<header>
+    <div class="nav">
+        <ul>
+            <li><a href="home.html">Home </a></li>
+            <li><a href="MySkills.html">My Skills </a></li>
+            <li><a href="ToLearn.html">Skills I Am Learning </a></li>
+        </ul>
+    </div>
+</header>
+<main>
+    <br>
+    <br>
     <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
     <h2>LinkedIn: <a
             href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/</a>
     </h2>
-    <nav><a href="home.html">Home  </a><a href="MySkills.html">My Skills  </a><a href="ToLearn.html">Skills I Am Learning  </a></nav>
     <div class="PrioratizedToLearn">
         <h2>Skills I will Prioratize.</h2>
         <p>For each skill I plan on Five to Ten hours of learning time.</p>
@@ -99,7 +110,10 @@
             Okta
             </p>
     </div>
-
+</main>
+<footer>
+    
+</footer>
 </body>
 
 </html>
