Fixed linkedin links

--- a/ToLearn.html
+++ b/ToLearn.html
@@ -23,7 +23,7 @@
     <br>
     <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
     <h2>LinkedIn: <a
-            href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/</a>
+            href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
     </h2>
     <div class="PrioratizedToLearn">
         <h2>Skills I will Prioratize.</h2>
