Added stories and images

--- a/MySkills.html
+++ b/MySkills.html
@@ -10,101 +10,148 @@
 
 <body>
 
-<header>
-    <div class="nav">
-        <ul>
-            <li><a href="home.html">Home </a></li>
-            <li><a href="MySkills.html">My Skills </a></li>
-            <li><a href="ToLearn.html">Skills I Am Learning </a></li>
-        </ul>
-    </div>
-</header>
-<main>
-    <br>
-    <br>
-    <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
-    <h2>LinkedIn: <a
-            href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
-    </h2>
-    <div class="skills">
-        <ul>
-            <li>
-                <h3>C#/.NET Core/.Net</h3>
-                <p>I am taking another course to help give me projects in asp.net and .Net Core. Eache week I will do a
-                    new project using this tech stack.</p>
-            </li>
-            <li>
-                <h3>Javascript</h3>
-                <p>I will be writing this personal website using javascript, Html and css.</p>
-            </li>
-            <li>
-                <h3>Web Development(HTML, css)</h3>
-                <p>I will be writing this personal website using javascript, Html and css.</p>
-            </li>
-            <li>
-                <h3>Web Services(SOAP, REST, microservices, DDD)</h3>
-                <p>I wil be using more REST services in my .NET projects.</p>
-            </li>
-            <li>
-                <h3>Object-oriented principles</h3>
-                <p>I am working on a java card game. It will be a card dungeon crawler. I will use Java to practie OO
-                    principles.</p>
-            </li>
-            <li>
-                <h3>Unit testing</h3>
-                <p>Unit testing allows me to prove that my code is working the way I think it is. I use this before I
-                    push to my repos.</p>
-            </li>
-            <li>
-                <h3>Experience with GIT</h3>
-                <p>Each project I do has a git repo. This helps me keep track of what I have done and try things on
-                    different branches so that I dont break the master when I try new things.</p>
-            </li>
-            <li>
-                <h3>Coding(Python, c++ Java)</h3>
-                <p>I have many projects in c, c++, java and pythin. I am working on a triangulation application using
-                    python.</p>
-            </li>
-            <li>
-                <h3>WordPress</h3>
-                <p>I have made wordpress websites for a needpoint business.</p>
-            </li>
-            <li>
-                <h3>Visual Studio</h3> 
-                <p>For most of my projects I use Visual studios. It is nice because of all the templetes it provides.</p>
-            </li>
-            <li>
-                <h3>Distributed systems</h3>
-                <p>Using eixir I practice concuracny in my programs. I am also able to use multiple computers to improve the ability of my programs.</p>
-            </li>
-            <li>
-                <h3>Breaking down customer requirements into well-defined technical tasks</h3>
-                <p>Each of my assignments I have to break down customer(Teacher) requirements. If I don't I seek a better understanding with the customer.</p>
-            </li>
-            <li>
-                <h3>Single responsibility and dependency injection</h3>
-                <p>This is imortant to make my code flexible. This is commonly used in Xamarain forms and .Net Core projects.</p>
-            </li>
-            <li>
-                <h3>Agile Experience</h3>
-                <p>Every Porject I do for school is a lesson in Agile programing.</p>
-            </li>
-                    <li>
-                        <h3>Prototyping</h3>
-                        <p>This is what I really like to do. It allows me to just try things and experiment. It is nice because I know that i dont have to be perfect the first time threw. I can just try. It is important to remember that a prototype is not ment for production.</p>
-                    </li>
-            <li>
-                <h3>Willing to Learn/Teach</h3>
-            </li>
-            <li>
-                <h3>US Citizen</h3>
-            </li>
-        </ul>
-    </div>
-</main>
-<footer>
-    
-</footer>
+    <header>
+        <div class="nav">
+            <ul>
+                <li><a href="home.html">Home </a></li>
+                <li><a href="MySkills.html">My Skills </a></li>
+                <li><a href="ToLearn.html">Skills I Am Learning </a></li>
+            </ul>
+        </div>
+    </header>
+    <main>
+        <br>
+        <br>
+        <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
+        <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
+        </h2>
+        <div class="skills">
+            <ul>
+                <li>
+                    <h3>C#/.NET Core/.Net</h3>
+                    <p>//I am taking another course to help give me projects in asp.net and .Net Core. Eache week I will
+                        do a new project using this tech stack.</p>
+                    <div class="ASP">
+                        <div class="ASP_Clone">
+                            <h4>Currently I am working on a Patrion clone.</h4>
+                            <img src="Pics\EmptyBlogPage.png">
+                            <img src="Pics\AddBlog.png">
+                        </div>
+                        <div class="ASP_Comments_Categories">
+                            <h4>I have started with blog posts with comments and categories.</h4>
+                            <img src="Pics\AddCommentsAndAddCategoriedToBlog.png">
+                            <img src="Pics\BlogWithCommetnAndCategories.png">
+                        </div>
+                        <div class="ASP_Many_To_Many">
+                            <h4>This shows my use of databases, Efcore, one to many and many to many relationships in
+                                asp.net.</h4>
+                            <img src="Pics\ManyToMany.png">
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <h3>Javascript</h3>
+                    <p>I will be writing this personal website using javascript, Html and css.</p>
+                </li>
+                <li>
+                    <h3>Web Development(HTML, css)</h3>
+                    <p>This Webstite is All HTML and CSS as of right now. I Plan on Adding Javascript soon.</p>
+                </li>
+                <li>
+                    <h3>Web Services(SOAP, REST, microservices, DDD)</h3>
+                    <p>I wil be using more REST services in my .NET projects.</p>
+                </li>
+                <li>
+                    <h3>Object-oriented principles</h3>
+                    <p>I am working on a java card game. It will be a card dungeon crawler. I will use Java to practie
+                        OO
+                        principles.</p>
+                </li>
+                <li>
+                    <h3>Unit testing</h3>
+                    <p>Unit testing allows me to prove that my code is working the way I think it is. I use this before
+                        I
+                        push to my repos.</p>
+                </li>
+                <li>
+                    <h3>Experience with GIT</h3>
+                    <p>Each project I do has a git repo. This helps me keep track of what I have done and try things on
+                        different branches so that I dont break the master when I try new things.</p>
+                </li>
+                <li>
+                    <h3>Coding(Python, c++ Java)</h3>
+                    <p>I have many projects in c, c++, java and pythin. I am working on a triangulation application
+                        using python.
+                    <div class="Python_Time_Logger">
+                        <div class="Python_Time_Logger_GUI">
+                            <h4>I have been working on a Python Daily Logger or journal. </h4>
+                            <h4>I started with an MVP command line prject and have moved into a gui.</h4>
+                            <img src="Pics\TimeLoggerScreenshot.png">
+                        </div>
+                        <div class="Python_Time_Logger_File_Viewer">
+                            <h4>I decided to add the ability to view the file that is created.</h4>
+                            <img src="Pics\TimeLoggerFileViewScreenshot.png">
+                        </div>
+                        <div class="Python_Time_Logger_Skills_Shown">
+                            <h4>This Application shows my ability to write a GUI for a python program, open, read and
+                                write to a file.</h4>
+                            <img src="Pics\TimeLoggerWindowSetUp.png">
+                            <img src="Pics\TimeLoggerViewFile.png">
+                            <img src="Pics\TimeLoggerGetDateAsStringScreenshot.png">
+                            <img src="Pics\TimeLoggerGetDailyLog.png">
+                        </div>
+                        <div class="Python_Time_Logger_Stretch">
+                            <h4>I have been trying to use clean code. I am taking the time to think of good name, Refactor my code and hopefully make the code speak for itself.</h4>
+                        </div>
+                    </div>
+                    </p>
+                </li>
+                <li>
+                    <h3>WordPress</h3>
+                    <p>I have made wordpress websites for a needpoint business.</p>
+                </li>
+                <li>
+                    <h3>Visual Studio</h3> 
+                    <p>For most of my projects I use Visual studios. It is nice because of all the templetes it
+                        provides.</p>
+                </li>
+                <li>
+                    <h3>Distributed systems</h3>
+                    <p>Using eixir I practice concuracny in my programs. I am also able to use multiple computers to
+                        improve the ability of my programs.</p>
+                </li>
+                <li>
+                    <h3>Breaking down customer requirements into well-defined technical tasks</h3>
+                    <p>Each of my assignments I have to break down customer(Teacher) requirements. If I don't I seek a
+                        better understanding with the customer.</p>
+                </li>
+                <li>
+                    <h3>Single responsibility and dependency injection</h3>
+                    <p>This is imortant to make my code flexible. This is commonly used in Xamarain forms and .Net Core
+                        projects.</p>
+                </li>
+                <li>
+                    <h3>Agile Experience</h3>
+                    <p>Every Porject I do for school is a lesson in Agile programing.</p>
+                </li>
+                <li>
+                    <h3>Prototyping</h3>
+                    <p>This is what I really like to do. It allows me to just try things and experiment. It is nice
+                        because I know that i dont have to be perfect the first time threw. I can just try. It is
+                        important to remember that a prototype is not ment for production.</p>
+                </li>
+                <li>
+                    <h3>Willing to Learn/Teach</h3>
+                </li>
+                <li>
+                    <h3>US Citizen</h3>
+                </li>
+            </ul>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
