Started adding individual skill pages. one for git, python, c#.netcore,webApi

--- a/MySkills.html
+++ b/MySkills.html
@@ -28,38 +28,20 @@
         <div class="skills">
             <ul>
                 <li>
-                    <h3>C#/.NET Core/.Net</h3>
-                    <p>//I am taking another course to help give me projects in asp.net and .Net Core. Eache week I will
-                        do a new project using this tech stack.</p>
-                    <div class="ASP">
-                        <div class="ASP_Clone">
-                            <h4>Currently I am working on a Patrion clone.</h4>
-                            <img src="Pics\EmptyBlogPage.png">
-                            <img src="Pics\AddBlog.png">
-                        </div>
-                        <div class="ASP_Comments_Categories">
-                            <h4>I have started with blog posts with comments and categories.</h4>
-                            <img src="Pics\AddCommentsAndAddCategoriedToBlog.png">
-                            <img src="Pics\BlogWithCommetnAndCategories.png">
-                        </div>
-                        <div class="ASP_Many_To_Many">
-                            <h4>This shows my use of databases, Efcore, one to many and many to many relationships in
-                                asp.net.</h4>
-                            <img src="Pics\ManyToMany.png">
-                        </div>
-                    </div>
+                    <a href="netCore.html"><h3>C#/.NET Core/.Net</h3></a>
+                    <p>This is a messaging app that is in progress.</p>
                 </li>
                 <li>
                     <h3>Javascript</h3>
-                    <p>I will be writing this personal website using javascript, Html and css.</p>
+                    <p>Currently working on moving apps from php to node.js with Vue front end for Snow College.</p>
                 </li>
                 <li>
                     <h3>Web Development(HTML, css)</h3>
                     <p>This Webstite is All HTML and CSS as of right now. I Plan on Adding Javascript soon.</p>
                 </li>
                 <li>
-                    <h3>Web Services(SOAP, REST, microservices, DDD)</h3>
-                    <p>I wil be using more REST services in my .NET projects.</p>
+                    <a href="webApi.html"><h3>Web Services(SOAP, REST, microservices, DDD)</h3></a>
+                    <p>I wrote a simple Api that cakks another Api. (The Chuck Norris Joke Api)</p>
                 </li>
                 <li>
                     <h3>Object-oriented principles</h3>
