--- a/MySkills.html
+++ b/MySkills.html
@@ -56,36 +56,14 @@
                         push to my repos.</p>
                 </li>
                 <li>
-                    <h3>Experience with GIT</h3>
+                    <a href="gitExperience.html"><h3>Experience with GIT</h3></a>
                     <p>Each project I do has a git repo. This helps me keep track of what I have done and try things on
                         different branches so that I dont break the master when I try new things.</p>
                 </li>
                 <li>
-                    <h3>Coding(Python, c++ Java)</h3>
+                    <a href="pythonExperience.html"><h3>Coding(Python, c++ Java)</h3></a>
                     <p>I have many projects in c, c++, java and pythin. I am working on a triangulation application
                         using python.
-                    <div class="Python_Time_Logger">
-                        <div class="Python_Time_Logger_GUI">
-                            <h4>I have been working on a Python Daily Logger or journal. </h4>
-                            <h4>I started with an MVP command line prject and have moved into a gui.</h4>
-                            <img src="Pics\TimeLoggerScreenshot.png">
-                        </div>
-                        <div class="Python_Time_Logger_File_Viewer">
-                            <h4>I decided to add the ability to view the file that is created.</h4>
-                            <img src="Pics\TimeLoggerFileViewScreenshot.png">
-                        </div>
-                        <div class="Python_Time_Logger_Skills_Shown">
-                            <h4>This Application shows my ability to write a GUI for a python program, open, read and
-                                write to a file.</h4>
-                            <img src="Pics\TimeLoggerWindowSetUp.png">
-                            <img src="Pics\TimeLoggerViewFile.png">
-                            <img src="Pics\TimeLoggerGetDateAsStringScreenshot.png">
-                            <img src="Pics\TimeLoggerGetDailyLog.png">
-                        </div>
-                        <div class="Python_Time_Logger_Stretch">
-                            <h4>I have been trying to use clean code. I am taking the time to think of good name, Refactor my code and hopefully make the code speak for itself.</h4>
-                        </div>
-                    </div>
                     </p>
                 </li>
                 <li>
