Added My Four Story points

--- a/MySkills.html
+++ b/MySkills.html
@@ -28,42 +28,54 @@
         <div class="skills">
             <ul>
                 <li>
-                    <a href="netCore.html"><h3>C#/.NET Core/.Net</h3></a>
+                    <a href="netCore.html">
+                        <h3>C#/.NET Core/.Net</h3>
+                    </a>
                     <p>This is a messaging app that is in progress.</p>
                 </li>
                 <li>
-                    <h3>Javascript</h3>
-                    <p>Currently working on moving apps from php to node.js with Vue front end for Snow College.</p>
+                    <a href="TDD.html">
+                        <h3>Test Driven Development</h3>
+                    </a>
+                    <p> TDD leads to flexible code.</p>
+                </li>
+                <li>
+                    <a href="webApi.html">
+                        <h3>Web Services(SOAP, REST, microservices, DDD)</h3>
+                    </a>
+                    <p>I wrote a simple Api that cakks another Api. (The Chuck Norris Joke Api)</p>
+                </li>
+                <li>
+                    <a href="Triangualr.html">
+                        <h3>Object-oriented principles</h3>
+                    </a>
+                    <p>I am working on a java card game. It will be a card dungeon crawler. I will use Java to practie
+                        OO
+                        principles.</p>
+                </li>
+                <li>
+                    <a href="node.html">
+                        <h3>Javascript</h3>
+                    </a>
+                    <p>I am moving legacy code written in php into node.js apps.</p>
                 </li>
                 <li>
                     <h3>Web Development(HTML, css)</h3>
                     <p>This Webstite is All HTML and CSS as of right now. I Plan on Adding Javascript soon.</p>
                 </li>
                 <li>
-                    <a href="webApi.html"><h3>Web Services(SOAP, REST, microservices, DDD)</h3></a>
-                    <p>I wrote a simple Api that cakks another Api. (The Chuck Norris Joke Api)</p>
-                </li>
-                <li>
-                    <h3>Object-oriented principles</h3>
-                    <p>I am working on a java card game. It will be a card dungeon crawler. I will use Java to practie
-                        OO
-                        principles.</p>
-                </li>
-                <li>
-                    <h3>Unit testing</h3>
-                    <p>Unit testing allows me to prove that my code is working the way I think it is. I use this before
-                        I
-                        push to my repos.</p>
-                </li>
-                <li>
-                    <a href="gitExperience.html"><h3>Experience with GIT</h3></a>
+                    <a href="gitExperience.html">
+                        <h3>Experience with GIT</h3>
+                    </a>
                     <p>Each project I do has a git repo. This helps me keep track of what I have done and try things on
                         different branches so that I dont break the master when I try new things.</p>
                 </li>
                 <li>
-                    <a href="pythonExperience.html"><h3>Coding(Python, c++ Java)</h3></a>
+                    <a href="pythonExperience.html">
+                        <h3>Coding(Python, c++ Java)</h3>
+                    </a>
                     <p>I have many projects in c, c++, java and pythin. I am working on a triangulation application
-                        using python.
+                        using Java.
                     </p>
                 </li>
                 <li>
